add new style sheet and link for login styles

--- a/src/components/start.css
+++ b/src/components/start.css
@@ -57,10 +57,10 @@
 
 footer {
     position: absolute;
-    width: 85%;
+    width: 100%;
     height: 2rem;
     left: 0px;
-    top: 78%;
+    bottom: 0px;
     background: #B7E7E9;
     text-align: center;
-}
+} 
