--- a/src/style.css
+++ b/src/style.css
@@ -4,26 +4,28 @@
     box-sizing: border-box;
 }
 
-/*start
+/*start*/
 .container {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    width: 420px ;
 }
-.btns{
-    display: flex;
-    margin: 1rem 0 1rem 0.01rem;
-}*/
+
 .header{
     display: flex ;
-
 }
 
 #logo {
-    width: 8rem;
+    width: 12.5625rem;
+    height: 3.125rem;
     margin: 1rem;
 }
 
 #iconprofile     {
-    width: 1.5rem;
+    width: 3.125rem;
     margin: 1rem 0 1.3rem 1rem;
 }
 
@@ -39,28 +41,32 @@
 .main{
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     align-content: center;
+    align-items: center;
+    gap:2rem;
+    margin-top: 10rem;
 }
 
 #slogan {
-    font-size: 1rem;
-    margin: 20% 5% 5% 5%;
+    font-size: 1.25rem;
+    margin: 0;
+    width: 19.375rem;
     color: #E350A8;
 }
 
 #women-tech {
     display: flex;
-    width: 60%;
-    margin: 10% 25% 10% 0;
+    width: 23.8125rem;
+    margin: 0;
+    height: 26.25rem;
 }
 
 footer {
     position: absolute;
-    width: 85%;
+    width: 100%;
     height: 2rem;
-    left: 0px;
-    top: 78%;
+    left: 0;
+    bottom: 0;
     background: #B7E7E9;
     text-align: center;
 }
