--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,8 +1,9 @@
-.text {
+.text, #text {
     font-size: 20px;
     text-align: center;
     margin-top: 111px;
     margin-bottom: 53px;
+   
 }
 
 .container {
@@ -61,19 +62,4 @@
 
 .loginIcon, .signUpIcon{
     margin-top: 13px;
-}
-
-/*SignUp styles*/
-
-#pMessage{
-    font-size: 12px;
-    color: #686E8E;
-    width: 310px;
-    text-align: center;
-    margin: 23px 0 37px;
-}
-
-.nameslabel{
-    align-self: start;
-    font-size: 20px;
 }
