adds setTimer, message error validation for sign-up.js, removes providers buttons in login.js and sign-up.js, adds css style

--- a/src/css/signUp.css
+++ b/src/css/signUp.css
@@ -15,3 +15,15 @@
 #text{
     margin-top: 70px;  
 }
+
+.errorMessage{
+    color: red;
+    align-self: center;
+    margin: 0 0 10px;
+}
+
+#congrats{
+    color: green;
+    align-self: center;
+    margin: 0 0 10px;
+}
