removes default style logout button

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -25,6 +25,8 @@ header{
 }
 #logout{
     align-self: center;
+    border:none;
+    background-color: transparent;
 }
 textarea{
     align-self: center;
