--- a/src/css/home.css
+++ b/src/css/home.css
@@ -7,7 +7,7 @@
     width: 420px ;
 }
 
-header{
+#header{
     display: flex;
     justify-content: flex-start;
     border-bottom: 1px solid black;    
