--- a/src/css/check.css
+++ b/src/css/check.css
@@ -51,3 +51,10 @@
         box-shadow: inset 0px 0px 0px 30px #7ac142;
     }
 }
+
+#container{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 200px;
+}
