adds font size style to message id

--- a/src/css/check.css
+++ b/src/css/check.css
@@ -58,3 +58,9 @@
     align-items: center;
     margin-top: 200px;
 }
+
+#message{
+    margin: 10px;
+    text-align: center;
+    font-size: 2.2rem;
+}
