--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,12 +1,3 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-    width: 420px ;
-}
-
 #header{
     display: flex;
     justify-content: flex-start;
@@ -17,7 +8,7 @@
     height: 17%;
     margin-left: 1rem;
     align-self: center;
-    margin-right: 187px;
+    margin-right: 50%;
 }
 #profile     {
     width: 3.125rem;
