--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,3 +1,8 @@
+/* #body-home{
+    height: auto;
+    background-color: #968fa84b;
+    background-repeat: repeat-y;
+} */
 #header{
     display: flex;
     justify-content: flex-start;
@@ -10,7 +15,7 @@
     align-self: center;
     margin-right: 50%;
 }
-#profile     {
+#profile {
     width: 3.125rem;
     margin: 1rem 0.5rem 0.5rem 1rem;
 }
@@ -19,17 +24,20 @@
     border:none;
     background-color: transparent;
 }
-textarea{
+.section-home{
+    display: flex;
+    flex-direction: column;
+    width: 346px;
+    margin: 15px auto;
+}
+
+#post-container{
     align-self: center;
     width: 100%;
     height: 70px;
+    background-color:#ffff;
 }
-section{
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-    margin: 55px auto;
-}
+
 #share{
     align-self: end;
     width: 92px;
@@ -40,4 +48,11 @@ section{
     border:none;
     margin-top: 10px;
     font-size: 1rem;
+}
+#post-content{
+    padding: .1rem;
+    margin: .8rem 0;
+    border: 1px solid #4A26AA;
+    background-color: #d9d9d97a;
+    font-size: small;
 }
