feat:added styles for post-content

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -67,11 +67,12 @@
 .post-content{
     padding: .1rem;
     margin: .8rem 0;
-    border: 1px solid #4A26AA;
+    border: 1px solid #D9D9D9;
     border-radius: 3px;
     box-shadow: 0 1px 1px 0 rgb(161, 161, 161), 0 1px 1px 0 rgb(114, 114, 114);
     background-color: #d9d9d97a;
     font-size: small;
+    padding: 10px;
 }
 
 .container-header-post{
@@ -83,30 +84,48 @@
 h2{
     margin: 15px 130px 25px 0;
     font-size: 13px;
+    max-width: 113px;
 }
 
-span.delete-edit {
-    margin: 7px 5px 0 0;
+#delete-edit {
+    display: flex;
 }
 
 p.post-user{
     padding: 10px;
-    border-bottom: 1px solid rgb(15, 15, 15);
+    border-bottom: 1px solid gray;
 }
 
 div.like-comment{
     display: flex;
-    margin-top: 10px;
+    justify-content: space-around;
+    padding: 10px;
+    padding-bottom: 0px;
+    margin-top: 7px;
 }
 
-i.fa-regular {
-    width: 25px;
+ i.fa-regular {
+/*     width: 25px;
     height: 27.71px;
-    margin-left: 50px;
-}
+    margin-left: 50px; */
+    margin-right: 5px;
+    font-size: 20px;
+    color: #E350AB;
+} 
 
 img.comment-img {
     width: 24px;
     height: 21px;
     margin: -1.1px, 5px, 100px;
+    margin-right: 5px;
+}
+
+.icon-container{
+    display: flex;
+    align-items: center;
+}
+
+.fa-solid{
+    margin-right: 5px;
+    color: #544D4D;
 }
