feat: add updateDoc and arrayRemove for like and dislike functionality

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -113,7 +113,7 @@ div.like-comment{
     margin-top: 7px;
 }
 
- i.fa-regular, i.fa-solid {
+i.fa-heart {
 /*     width: 25px;
     height: 27.71px;
     margin-left: 50px; */
@@ -137,5 +137,6 @@ img.comment-img {
 .fa-trash, .fa-pencil{
     margin-right: 5px;
     color: #544D4D;
+    font-size: 15px;
 }
 
