--- a/src/css/home.css
+++ b/src/css/home.css
@@ -37,19 +37,32 @@
     font-size: 15px;
 }
 
-#post-container{
-    
-    padding: 10px;
-    margin-top: 10px;
-    resize: none;
-    align-self: center;
-    width: 338px;
-    height: 86.61px;
-    background-color: #ffff;
+#comment-container{
+    width: 100%;
+    height: 7em;
+    padding: 0;
     border: 1px solid #9543A7;
     box-shadow: 0 1px 1px 0 rgb(149,67,167 ), 0 1px 3px 0 rgb(149,67,167 );
+    margin-top: 10px;
+
+}
+
+#post-container{
+    border:none;
+    outline: none;
+    padding: 10px;
+    resize: none;
+    align-self: center;
+    width: 100%;
+    height: 86.61px;
     text-align: justify;
     font-size: 15px;
+}
+
+#counter {
+    float: right;
+    margin-right: 5px;
+    color:#544D4D;
 }
 
 #share{
@@ -132,6 +145,7 @@ img.comment-img {
 .icon-container{
     display: flex;
     align-items: center;
+    margin-right: -216px;
 }
 
 .fa-trash, .fa-pencil{
