Adds 500 characters in the input

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -115,6 +115,7 @@ p.post-user{
     padding: 10px;
     border-bottom: 1px solid gray;
     overflow-wrap: break-word ;
+    white-space: pre-wrap;
 }
 
 div.like-comment{
